Finalized Start/Stop Button and changed button colors ... updated some spacing

--- a/styles/global.css
+++ b/styles/global.css
@@ -25,7 +25,7 @@ h1 {
   padding: 20px;
   background-color: #4682b4;
   font-family: Times;
-  font-size: 34px;
+  font-size: 32px;
   font-weight: bold;
   text-align: center;
   color: whitesmoke;
@@ -33,7 +33,7 @@ h1 {
 h2 {
   margin: 0;
   font-family: Times;
-  font-size: 34px;
+  font-size: 32px;
   font-weight: bold;
   text-align: center;
   color: black;
@@ -100,57 +100,57 @@ h3 {
 .dropdown:hover .dropdown_item {
   display: block;
 }
-/* Large button formatting: used for primary tool bar */
+/* Large button formatting: used for secondary tool bar */
 .simulation_button {
-  background-color: #8a2be2;
+  background-color: #943ef8;
   color: white;
   padding: 16px 32px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 17px;
-  border: none;
+  border: 1px solid black;
   border-radius: 20px;
-  margin-left: 1.5%;
-  margin-right: 1.5%;
+  margin-left: 1.75%;
+  margin-right: 1.75%;
 }
 .simulation_button:hover {
   cursor: pointer;
-  background-color: #9370DB;
+  background-color: #6e24cb;
 }
 .start_button {
-  background-color: green;
+  background-color: #3BBB57;
   color: white;
   padding: 16px 32px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 17px;
-  border: none;
+  border: 1px solid black;
   border-radius: 20px;
-  margin-left: 1.5%;
-  margin-right: 1.5%;
+  margin-left: 1.75%;
+  margin-right: 1.75%;
 }
 .start_button:hover {
   cursor: pointer;
-  background-color: #9370DB;
+  background-color: #2E912B;
 }
 .stop_button {
-  background-color: red;
+  background-color: #CD5C5C;
   color: white;
   padding: 16px 32px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 17px;
-  border: none;
+  border: 1px solid black;
   border-radius: 20px;
-  margin-left: 1.5%;
-  margin-right: 1.5%;
+  margin-left: 1.75%;
+  margin-right: 1.75%;
 }
 .stop_button:hover {
   cursor: pointer;
-  background-color: #9370DB;
+  background-color: #A03D3D;
 }
 /* Primary tool bar formatting */
 .primary_toolbar {
@@ -169,7 +169,7 @@ h3 {
   padding-top: 25px;
   margin: 0 auto;
 } 
-/* Container for store multiple elements on the same row: used for secondary tool bar */
+/* Container for store multiple elements on the same row: used for primary tool bar */
 .input_container {
   display: flex;
   margin-left: .75%;
@@ -187,7 +187,7 @@ h3 {
 .submit_button {
   padding: 8px 8px;
   border: 2px solid #8a2be2;
-  background-color: #9370DB;
+  background-color: #9570DB;
   color: whitesmoke;
   font-size: 15px;
   text-align: center;
